--- a/index.html
+++ b/index.html
@@ -1,40 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Notifications page</title>
-</head>
-<body>
-
-  Notifications 3
-
-  Mark all as read
-
-  Mark Webber reacted to your recent post My first tournament today!
-  1m ago
-
-  Angela Gray followed you
-  5m ago
-
-  Jacob Thompson has joined your group Chess Club
-  1 day ago
-
-  Rizky Hasanuddin sent you a private message
-  5 days ago
-  Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
-  I'm already having lots of fun and improving my game.
-
-  Kimberly Smith commented on your picture
-  1 week ago
-
-  Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
-  2 weeks ago
-
-  Anna Kim left the group Chess Club
-  2 weeks ago
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link rel="stylesheet" href="./dist/css/main.css">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Notifications page</title>
+  </head>
+  <body>
+    <main>
+      <div class="header">
+        <div class="logo">Notifications <span class="count" id="count">3</span></div>
+        <div class="button"> Mark all as read</div></div>
+      <div class="notifications">
+        <div class="notification unread">
+          <img src="./assets/images/avatar-mark-webber.webp" alt="">
+          <div class="details">
+            <span class="name">Mark Webber</span> reacted to your recent post <span class="about">My first tournament today!</span>
+            <span class="dot"></span>
+             <span class="time">
+              1m
+              ago
+            </span>
+          </div>
+        </div>
+        <div class="notification unread">
+          <img src="./assets/images/avatar-angela-gray.webp" alt="">
+          <div class="details">
+            <span class="name">Angela Gray</span> followed you
+            <span class="dot"></span> 
+            <span class="time">5m ago</span>
+          </div>
+        </div>
+        <div class="notification unread">
+          <img src="./assets/images/avatar-jacob-thompson.webp" alt="">
+          <div class="details">
+            <span class="name">Jacob Thompson</span> has joined your group <span class="about">Chess Club</span> 
+            <span class="dot"></span>
+            <span class="time">1 day ago</span>
+          </div>
+        </div>
+        <div class="notification">
+          <img src="./assets/images/avatar-rizky-hasanuddin.webp" alt="">
+          <div class="details">
+            <span class="name">Rizky Hasanuddin</span> sent you a private message <span class="time">5 days ago</span>
+            <div class="message">
+              Hello, thanks
+              for setting up the Chess Club. I've been a member for a few weeks now
+              and I'm already having lots of fun and improving my game.
+            </div>
+          </div>
+        </div>
+        <div class="notification">
+          <img src="./assets/images/avatar-kimberly-smith.webp" alt="">
+          <div class="details">
+            <span class="name">Kimberly Smith</span> commented on your picture <span class="time">1 week ago</span>
+          </div>
+        </div>
+        <div class="notification">
+          <img src="./assets/images/avatar-nathan-peterson.webp" alt="">
+          <div class="details">
+            <span class="name">Nathan Peterson</span> reacted to your recent post <span class="about">
+              5 end-game strategies to
+              increase your win rate
+            </span> <span class="time">2 weeks ago</span>
+          </div>
+        </div> 
+        <div class="notification">
+          <img src="./assets/images/avatar-anna-kim.webp" alt="">
+          <div class="details">
+            <span class="name">Anna Kim</span> left the group <span class="about">Chess Club</span> <span class="time">
+              2
+              weeks ago
+            </span>
+          </div>
+        </div>
+      </div>
+    </main>
+    <script src="./index.js"></script>
+  </body>
 </html>
