--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             </div>
           </div>
         </div>
-        <div class="notification read">
+        <div class="notification read smith">
           <img src="./assets/images/avatar-kimberly-smith.webp" alt="">
           <div class="details">
             <span class="name">Kimberly Smith</span> commented on your picture
             <span class="dot"></span> 
             <span class="time">1 week ago</span>
           </div>
-          <img class= "kim" src="./assets/images/avatar-anna-kim.webp" alt="">
+          <img class= "kim" src="./assets/images/image-chess.webp" alt="">
         </div>
         <div class="notification read">
           <img src="./assets/images/avatar-nathan-peterson.webp" alt="">
